--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fast-duplicate",
+  "name": "new-fast-duplicate",
   "main": "./lib/fast-duplicate",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Easily duplicate selected line, below or above, with keyboard shortcut, Netbeans like",
   "activationCommands": {
     "atom-workspace": "fast-duplicate:toggle"
@@ -10,10 +10,10 @@
     "fast-duplicate:duplicate-down",
     "fast-duplicate:duplicate-up"
   ],
-  "repository": "https://github.com/garralab/fast-duplicate",
+  "repository": "https://github.com/vanioinformatika/new-fast-duplicate",
   "license": "MIT",
   "engines": {
-    "atom": ">=0.174.0 <2.0.0"
+    "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {}
 }
